[package]
name = "luxhaus"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "luxhaus"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
arrayref = "0.3.7"
mpl-token-metadata = { version = "1.11.0", features = ["no-entrypoint"] }
mpl-token-auth-rules = { version = "1.2", features = ["no-entrypoint"] }
solana-program = "1.14.13"
spl-associated-token-account = {version = "1.1.3", features = ["no-entrypoint"]}
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }

